src/objects/PANG_Related_Data_Asset__c.object
<CustomObject>
    <description>Join object relating RWE Data Assets to RWE Projects and RWE Requests</description>
    <fields>
        <fullName>Customer_Comment__c</fullName>
        <label>Customer Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Decision__c</fullName>
        <label>Customer Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Will Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>PANG_Data_Asset__c</referenceTo>
        <relationshipLabel>Projects / Requests</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>PANG_Project__c</referenceTo>
        <relationshipLabel>Data Assets</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>PANG_Request__c</referenceTo>
        <relationshipLabel>Data Assets</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RWE Related Data Asset</label>
    <nameField>
        <displayFormat>RWE-RDA-{000000000}</displayFormat>
        <label>Related Data Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Related Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>